# myshows_mcp

./: .gitignore  LICENSE  README.md  glama.json  pyproject.toml
src/myshows_mcp/: server.py
src/myshows_mcp/api/: myshows_api.py
